Fixed issue relating to the app responsiveness on smaller screen - Added a maximum width to the thumbnail container

--- a/src/styles/EachProject.module.scss
+++ b/src/styles/EachProject.module.scss
@@ -27,7 +27,6 @@
             width: 100%;
             .curr_img {
                 width: 100%;
-                height: 300px;
                 object-fit: contain;
                 object-position: top center;
                 display: block;
@@ -36,10 +35,10 @@
             }
             .thumbnail_container {
                 width: 100%;
+                max-width: 80vw;
                 @include flex(center, start, 0.5rem);
                 .thumbnail {
                     width: 100px;
-                    height: 70px;
                     border-radius: 5px;
                     cursor: pointer;
                     object-fit: contain;
